chore: update .gitattributes file.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,6 @@
 *.html linguist-vendored
 *.swift linguist-vendored
 *.cmake linguist-vendored
+*.txt linguist-vendored
 
 *.dart linguist-language=Dart
